test/expected/explain_k_al64.out
explain _Alignas(64) S x
        ^
9: error: struct or union can not be aligned in C
